3.0.0 Listing/Sales/Events variable renaming
