# src/main/java/tech/bananaz/spring/models/Listings.java
@@ -30,7 +30,6 @@ public class Listings {
 	private Boolean showBundles;
 	@Column(nullable = false, columnDefinition="TINYINT(1) UNSIGNED DEFAULT 0")
 	private Boolean autoRarity;
-	private String  rarityEngine;
 	private String  raritySlugOverwrite;
 	@Column(nullable = false, columnDefinition="TINYINT(1) UNSIGNED DEFAULT 0")
 	private Boolean excludeOpensea;
@@ -41,7 +40,7 @@ public class Listings {
 	@Column(nullable = false, columnDefinition="TINYINT(1) UNSIGNED DEFAULT 0")
 	private Boolean excludeTwitter;
 	@Column(nullable = false, columnDefinition="TINYINT(1) UNSIGNED DEFAULT 0")
-	private Boolean contractIsSlug;
+	private Boolean isSlug;
 	@Column(nullable = false, columnDefinition="TINYINT(1) UNSIGNED DEFAULT 0")
 	private Boolean solanaOnOpensea;
 	@Column(columnDefinition="BIGINT UNSIGNED DEFAULT 0")
