# src/main/java/tech/bananaz/spring/models/Sales.java
@@ -34,7 +34,6 @@ public class Sales {
 	private Boolean showBundles;
 	@Column(nullable = false, columnDefinition="TINYINT(1) UNSIGNED DEFAULT 0")
 	private Boolean autoRarity;
-	private String  rarityEngine;
 	private String  raritySlugOverwrite;
 	@Column(nullable = false, columnDefinition="TINYINT(1) UNSIGNED DEFAULT 0")
 	private Boolean excludeOpensea;
@@ -45,7 +44,7 @@ public class Sales {
 	@Column(nullable = false, columnDefinition="TINYINT(1) UNSIGNED DEFAULT 0")
 	private Boolean excludeTwitter;
 	@Column(nullable = false, columnDefinition="TINYINT(1) UNSIGNED DEFAULT 0")
-	private Boolean contractIsSlug;
+	private Boolean isSlug;
 	@Column(nullable = false, columnDefinition="TINYINT(1) UNSIGNED DEFAULT 0")
 	private Boolean solanaOnOpensea;
 	@Column(columnDefinition="BIGINT UNSIGNED DEFAULT 0")
